--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+/* src/index.css */
+
+/* Nhập file config màu sắc */
+@import "./styles/theme.css";
+
+/* Áp dụng style cơ bản cho toàn bộ trang */
+body {
+	background-color: var(--color-background);
+	color: var(--color-text-primary);
+}
