sửa 1 tỷ thứ :D

--- a/fe/src/styles/theme.css
+++ b/fe/src/styles/theme.css
@@ -29,8 +29,8 @@
 	/* --- Màu chính (Primary - Xanh/Tím) --- */
 	--color-primary-100: #ffffff;
 	--color-primary-300: #38a7e7;
-	--color-primary-500: #0a4d74;
-	--color-primary-700: #136492;
+	--color-primary-500: #3c91c2;
+	--color-primary-700: #2080b8;
 
 	/* --- Cảnh báo (Warning - Vàng) --- */
 	--color-warning-500: #eab308;
